[package]
name = "wasi-peg"
version = "0.2.4"
authors = ["Aster <192607617@qq.com>"]
description = "A nightly parser combinator library for Rust."
homepage = "https://github.com/oovm/pex"
repository = "https://github.com/oovm/pex"
documentation = "https://docs.rs/pex"
keywords = ["parser", "parser-combinators", "monad"]
categories = ["parsing"]
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
#ucd-trie = { version = "0.1.5", optional = true }
regex = { version = "1.8.1", optional = true }

[dev-dependencies]

[features]
default = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true