[package]
name = "yggdrasil-wasi"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Shared Structure"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-rt"
keywords = ["parser", "generator", "peg", "grammar"]
categories = ["parsing"]
license = "MPL-2.0"
readme = "readme.md"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.22.0"
rctree = "0.6.0"

[dependencies.yggdrasil-rt]
version = "0.1.1"
#path = 'C:\Users\Dell\CLionProjects\yggdrasil.rs\projects\ygg-rt'

[features]
default = []
