[package]
name = "yggdrasil-wasi"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Shared Structure"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-rt"
keywords = ["parser", "generator", "peg", "grammar"]
categories = ["parsing"]
license = "MPL-2.0"
readme = "readme.md"
edition = "2021"


[lib]
name = "wasi_yggdrasil"
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.23.0"
rctree = "0.6.0"

[dependencies.yggdrasil-rt]
version = "0.1.3"
#path = 'C:\Users\Dell\CLionProjects\yggdrasil.rs\projects\ygg-rt'

[features]
default = []
